--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -22,7 +22,7 @@
     <div class="mem">
       <div class="mugshot" style="background-image: url(/img/ga_500.png);"></div>
       <div class="info">
-        <h3>Guillermo Aguilar</h3>
+        <h3>Dr. Guillermo Aguilar</h3>
         <p class="title">Post-doc</p>
         <p class="blurb"></p>
         <ul class='social-links'>
