--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -79,11 +79,13 @@
     <div class="mem">
       <div class="mugshot" style="background-image: url(/img/cb_500.png);"></div>
       <div class="info">
+		<a href="brunn.html"> 
         <h3>Carolin Brunn</h3>
-        <p class="title">Research Assistant</p>
+		</a>
+        <p class="title">Student Research Assistant</p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:Carolin.Brunn@gmx.de "></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:Carolin.Brunn@campus.tu-berlin.de "></a></li>
         </ul>
       </div>
     </div>
