adding lynn link

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -38,7 +38,9 @@
     <div class="mem">
       <div class="mugshot" style="background-image: url(/img/ls_500.png);"></div>
       <div class="info">
+        <a href="schmittwilken.html"> 
         <h3>Lynn Schmittwilken</h3>
+        </a>
         <p class="title">Ph.D. student</p>
         <p class="blurb"></p>
         <ul class='social-links'>
