changes at biancas computer

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -98,8 +98,10 @@
     <div class="mem">
       <div class="mugshot" style="background-image: url(/img/bdm_500.png);"></div>
       <div class="info">
+	<a href="delmestre.html"> 
         <h3>Bianca del Mestre</h3>
-        <p class="title">Assistant to Prof. Dr. Marianne Maertens</p>
+	</a>
+        <p class="title">Secretary of Prof. Dr. Marianne Maertens</p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
