--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -96,7 +96,7 @@
     </div>
     
     <div class="mem">
-      <div class="mugshot" style="background-image: url(/img/bdm_500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/bm_500.png);"></div>
       <div class="info">
 	<a href="delmestre.html"> 
         <h3>Bianca del Mestre</h3>
