--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -54,7 +54,20 @@
        </a>
     </div>
     
-
+    <div class="mem">
+	  <a href="vincent.html"> 
+      <div class="mugshot" style="background-image: url(/img/jv_500.png);"></div>
+      <div class="info">
+        <h3>Joris Vincent</h3>
+        <p class="title">Post-doc</p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:joris.vincent@gmail.com"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+    
     <div class="mem">
 	  <a href="brunn.html"> 
       <div class="mugshot" style="background-image: url(/img/cb_500.png);"></div>
