no link for joris yet

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -55,7 +55,7 @@
     </div>
     
     <div class="mem">
-	  <a href="vincent.html"> 
+	  <!-- <a href="vincent.html"> -->
       <div class="mugshot" style="background-image: url(/img/jv_500.png);"></div>
       <div class="info">
         <h3>Joris Vincent</h3>
@@ -65,7 +65,7 @@
           <li><a class='icon-mail' aria-label='Email' href="mailto:joris.vincent@gmail.com"></a></li>
         </ul>
       </div>
-      </a>
+      <!-- </a> -->
     </div>
     
     <div class="mem">
