updating lynn's pic

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -55,7 +55,7 @@
     
     <div class="mem">
 		<a href="schmittwilken.html"> 
-      <div class="mugshot" style="background-image: url(/img/ls_500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/ls_500_2.png);"></div>
       <div class="info">
         
         <h3>Lynn Schmittwilken</h3>
