change in bianca's phone number in people's page

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -125,7 +125,7 @@
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:delmestre@tu-berlin.de"></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:bianca.delmestre@tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
