new image had to have a new filename for Chrome to refresh it

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -9,7 +9,7 @@
   <section class="members">
 	<a href="maertens.html"> 
     <div class="mem">
-      <div class="mugshot" style="background-image: url(/img/mm_500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/mm2_500.png);"></div>
       <div class="info">
 		
         <h3>Prof. Dr. Marianne Maertens</h3>
