--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -39,14 +39,14 @@
     
 
     <div class="mem">
-	  <!-- <a href="vincent.html"> -->
+	  <a href="vincent.html">
       <div class="mugshot" style="background-image: url(/img/jv_500.png);"></div>
       <div class="info">
-        <h3>Joris Vincent, Ph.D.</h3>
+        <h3>Dr. Joris Vincent</h3>
         <p class="title">Post-doc</p>
         <p class="blurb"></p>
         <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:joris.vincent@gmail.com"></a></li>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:joris.vincent@tu-berlin.de"></a></li>
         </ul>
       </div>
       <!-- </a> -->
