update max URL to his pic

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -113,7 +113,7 @@
     </div>
     
      <div class="mem">
-	  <a href="brunn.html"> 
+	  <a href="pohlmann.html"> 
       <div class="mugshot" style="background-image: url(/img/mp_500.png);"></div>
       <div class="info">
 		
