changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -99,6 +99,8 @@
       </a>
     </div>
     
+
+
      <div class="mem">
 	  <a href="pohlmann.html"> 
       <div class="mugshot" style="background-image: url(/img/mp_500.png);"></div>
@@ -115,7 +117,25 @@
       </a>
     </div> 
 
-    
+
+
+    <div class="mem">
+	  <a href="matic.html"> 
+      <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
+      <div class="info">
+		
+        <h3>Matko Matic</h3>
+		
+        <p class="title">Student Research Assistant</p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:matko.matic@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>  
+
+
     <div class="mem">
 	  <a href="delmestre.html"> 
       <div class="mugshot" style="background-image: url(/img/bm_500.png);"></div>
