changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -137,6 +137,24 @@
 
 
     <div class="mem">
+	  <a href="maiwald.html"> 
+      <div class="mugshot" style="background-image: url(/img/maiwald.png);"></div>
+      <div class="info">
+        <h3>Amanda Maiwald</h3>
+	
+        <p class="title">Master Student (Project Codary.org)</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:a.maiwald@codary.org"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+    <div class="mem">
 	  <a href="delmestre.html"> 
       <div class="mugshot" style="background-image: url(/img/bm_500.png);"></div>
       <div class="info">
