changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -7,7 +7,8 @@
 
 <body>
   <section class="members">
-	<div class="mem">
+
+   <div class="mem">
 	<a href="maertens.html"> 
       <div class="mugshot" style="background-image: url(/img/mm2_500.png);"></div>
       <div class="info">
@@ -136,22 +137,6 @@
     </div>  
 
 
-    <div class="mem">
-	  <a href="maiwald.html"> 
-      <div class="mugshot" style="background-image: url(/img/maiwald.png);"></div>
-      <div class="info">
-        <h3>Amanda Maiwald</h3>
-	
-        <p class="title">Master Student (Project Codary.org)</p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:a.maiwald@codary.org"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
 
 
     <div class="mem">
@@ -173,11 +158,37 @@
 
   </section>
 
+  <br />
+  <h2>Students</h2>
+
+  <section class="members">
+    <div class="mem">
+	  <a href="maiwald.html"> 
+      <div class="mugshot" style="background-image: url(/img/maiwald.png);"></div>
+      <div class="info">
+        <h3>Amanda Maiwald</h3>
+	
+        <p class="title">Master Student (Project Codary.org)</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:a.maiwald@codary.org"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+ </section>
+
+
 
   <br />
   <h2>Alumni</h2>
     
   <section class="members alumni" style="background-color: #ffffff;">
+
+
     <div class="mem">
       <div class="mugshot" style="background-image: url(/img/yx_500.png);"></div>
       <div class="info">
