changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -29,7 +29,7 @@
       <div class="mugshot" style="background-image: url(/img/ga_500.png);"></div>
       <div class="info">
         <h3>Dr. Guillermo Aguilar</h3>
-        <p class="title">Post-doc</p>
+        <p class="title">Post-doc. I study visual perception in humans. I'm particularly interested in our perception of lightness, depth and transparency. I'm also interested in the evaluation and development of psychophysical methods that can reliably measure appearance. </p>
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:guillermo.aguilar@mail.tu-berlin.de"></a></li>
