changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -44,7 +44,7 @@
       <div class="mugshot" style="background-image: url(/img/jv_500.png);"></div>
       <div class="info">
         <h3>Dr. Joris Vincent</h3>
-        <p class="title">Post-doc</p>
+        <p class="title">Post-doc. I study visual perception in humans. I'm particularly interested in the perceptual representation of chromatic information in natural scenes. Ideally, I am looking to develop an (image computable) model for transforming chromaticity information to a representation that more accurately reflects human color perception. </p>
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:joris.vincent@tu-berlin.de"></a></li>
@@ -61,7 +61,7 @@
         
         <h3>Lynn Schmittwilken</h3>
        
-        <p class="title">Ph.D. student</p>
+        <p class="title">Ph.D. student. I study visual processing in humans. In particular, I am interested in how we perceive the three-dimensional nature of our surrounds, and how this information could be used to improve computer vision models. </p>
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:l.schmittwilken@tu-berlin.de"></a></li>
