changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -168,7 +168,7 @@
       <div class="info">
         <h3>Amanda Maiwald</h3>
 	
-        <p class="title">Master Student. Amanda explores gamification in the context of programming education in her master's thesis.</p>
+        <p class="title">Master Student. I explore gamification in the context of programming education in my master thesis.</p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
