changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -168,7 +168,7 @@
       <div class="info">
         <h3>Amanda Maiwald</h3>
 	
-        <p class="title">Master Student. I explore gamification in the context of programming education in my master thesis.</p>
+        <p class="title">Master Student. I am co-founder and responsible for codary's business development and product development. I studied economics and computer science at the Technische Universität and Humboldt Universität in Berlin. In my master thesis I explore gamification in the context of programming education.</p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
