changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -164,7 +164,7 @@
   <section class="members">
     <div class="mem">
 	  <a href="maiwald.html"> 
-      <div class="mugshot" style="background-image: url(/img/maiwald.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/am500.png);"></div>
       <div class="info">
         <h3>Amanda Maiwald</h3>
 	
