changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -161,6 +161,7 @@
   <br />
   <h2>Students</h2>
 
+
   <section class="members">
     <div class="mem">
 	  <a href="maiwald.html"> 
@@ -177,6 +178,24 @@
       </div>
       </a>
     </div>
+
+
+ <div class="mem">
+	  <a href="wohlhaupt.html"> 
+      <div class="mugshot" style="background-image: url(/img/cw500.png);"></div>
+      <div class="info">
+        <h3>Christian Wohlhaupt</h3>
+	
+        <p class="title">Bachelor Student. In my bachelor thesis I am researching potential differences in the aesthetic perception of sunset-pictures by people of different geographic origin for marketing purposes. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:wohlhaupt@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
 
 
  </section>
