changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -182,7 +182,7 @@
 
  <div class="mem">
 	  <a href="wohlhaupt.html"> 
-      <div class="mugshot" style="background-image: url(/img/cw500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/CW500.png);"></div>
       <div class="info">
         <h3>Christian Wohlhaupt</h3>
 	
