--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -181,6 +181,24 @@
 
 
  <div class="mem">
+	  <a href="bindermann.html"> 
+      <div class="mugshot" style="background-image: url(/img/mb500.png);"></div>
+      <div class="info">
+        <h3>Marcus Bindermann</h3>
+	
+        <p class="title">Bachelor Student. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:bindermann@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+ <div class="mem">
 	  <a href="wohlhaupt.html"> 
       <div class="mugshot" style="background-image: url(/img/CW500.png);"></div>
       <div class="info">
