changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -182,7 +182,7 @@
 
  <div class="mem">
 	  <a href="bindermann.html"> 
-      <div class="mugshot" style="background-image: url(/img/mb500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/mb_2_500.png);"></div>
       <div class="info">
         <h3>Marcus Bindermann</h3>
 	
