changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -215,6 +215,22 @@
     </div>
 
 
+<div class="mem">
+	  <a href="zinke.html"> 
+      <div class="mugshot" style="background-image: url(/img/mz500.png);"></div>
+      <div class="info">
+        <h3>Matti Zinke</h3>
+	
+        <p class="title">Bachelor Student. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:m.zinke@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
 
  </section>
 
