changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -164,6 +164,25 @@
     </div>
 
 
+<div class="mem">
+	  <a href="zhang.html"> 
+      <div class="mugshot" style="background-image: url(/img/wz_500.png);"></div>
+      <div class="info">
+        <h3>Wenwen Zhang</h3>
+	
+        <p class="title">Bachelor Student. In my bachelor thesis, I study the relationship between apparent contrast (supra-threshold discriminability) and contrast sensitivity (contrast discrimination thresholds) in human observers.</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:wenwen.zhang@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
  <div class="mem">
 	  <a href="bindermann.html"> 
       <div class="mugshot" style="background-image: url(/img/mb3_500.png);"></div>
