changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -170,7 +170,7 @@
       <div class="info">
         <h3>Wenwen Zhang</h3>
 	
-        <p class="title">Bachelor Student. In my bachelor thesis, I study the relationship between apparent contrast (supra-threshold discriminability) and contrast sensitivity (contrast discrimination thresholds) in human observers.</p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study the relationship between apparent contrast (supra-threshold discriminability) and contrast sensitivity (contrast discrimination thresholds) in human observers.</p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
