--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -153,7 +153,7 @@
       <div class="info">
         <h3>Amanda Maiwald</h3>
 	
-        <p class="title">Master Student. I am co-founder and responsible for codary's business development and product development. I studied economics and computer science at the Technische Universität and Humboldt Universität in Berlin. In my master thesis I explore gamification in the context of programming education.</p>
+        <p class="title">Master Student. I am co-founder and responsible for codary's business development and product development. I studied economics and computer science at the Technische Universität and Humboldt Universität in Berlin. In my Master thesis I explore gamification in the context of programming education.</p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
@@ -207,7 +207,7 @@
       <div class="info">
         <h3>Christian Wohlhaupt</h3>
 	
-        <p class="title">Bachelor Student. In my bachelor thesis I am researching potential differences in the aesthetic perception of sunset-pictures by people of different geographic origin for marketing purposes. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis I am researching potential differences in the aesthetic perception of sunset-pictures by people of different geographic origin for marketing purposes. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
