--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -86,24 +86,6 @@
     
 
 
-     <div class="mem">
-	  <a href="pohlmann.html"> 
-      <div class="mugshot" style="background-image: url(/img/mp_500.png);"></div>
-      <div class="info">
-		
-        <h3>Maximilian Pohlmann</h3>
-		
-        <p class="title">Student Research Assistant</p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:m.pohlmann@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div> 
-
-
-
     <div class="mem">
 	  <a href="matic.html"> 
       <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
@@ -246,6 +228,20 @@
 
 
 <div class="mem">
+      <div class="mugshot" style="background-image: url(/img/mp_500.png);"></div>
+      <div class="info">
+        <h3>Maximilian Pohlmann</h3>
+        <p class="title">B.Sc.</p>
+        <p class="blurb">Bachelor thesis written at Faculty IV - Electrical Engineering and Computer Science</p>
+        <ul class='social-links'>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+<div class="mem">
       <div class="mugshot" style="background-image: url(/img/cb_500.png);"></div>
       <div class="info">
         <h3>Carolin Brunn</h3>
@@ -269,6 +265,7 @@
         </ul>
       </div>
     </div>
+
     
     <div class="mem">
       <div class="mugshot" style="background-image: url(/img/sl_500.png);"></div>
