changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -232,7 +232,7 @@
       <div class="info">
         <h3>Maximilian Pohlmann</h3>
         <p class="title">B.Sc.</p>
-        <p class="blurb">Bachelor thesis written at Faculty IV - Electrical Engineering and Computer Science</p>
+        <p class="blurb">Bachelor thesis written in Computer Science at Faculty IV</p>
         <ul class='social-links'>
         </ul>
       </div>
