--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -231,8 +231,8 @@
       <div class="mugshot" style="background-image: url(/img/mp_500.png);"></div>
       <div class="info">
         <h3>Maximilian Pohlmann</h3>
-        <p class="title">B.Sc.</p>
-        <p class="blurb">Bachelor thesis written in Computer Science at Faculty IV</p>
+        <p class="title">Bachelor Student</p>
+        <p class="blurb">At the moment Maximilian writes his Bachelor thesis in Computer Science at Faculty IV</p>
         <ul class='social-links'>
         </ul>
       </div>
