changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -183,6 +183,24 @@
 
 
 
+<div class="mem">
+	  <a href="kestel.html"> 
+      <div class="mugshot" style="background-image: url(/img/nk500.png);"></div>
+      <div class="info">
+        <h3>Nico Kestel</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis I want to explore how CNNs might benefit from using dynamic images derived from fixational eye movements instead of static images to recognize objects in naturalistic scenes. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:nico.kestel@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
  <div class="mem">
 	  <a href="wohlhaupt.html"> 
       <div class="mugshot" style="background-image: url(/img/CW500.png);"></div>
