changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -171,7 +171,7 @@
       <div class="info">
         <h3>Marcus Bindermann</h3>
 	
-        <p class="title">Bachelor Student. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis in Computer Science, I study the human perception of brightness and especially brightness illusions. My aim is to compare the prediction of computer vision models with the human visual perception. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
