changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -224,7 +224,7 @@
       <div class="info">
         <h3>Matti Zinke</h3>
 	
-        <p class="title">Bachelor Student. </p>
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study how shading affects the human depth perception. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
