changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -249,7 +249,7 @@
       <div class="mugshot" style="background-image: url(/img/mp_500.png);"></div>
       <div class="info">
         <h3>Maximilian Pohlmann</h3>
-        <p class="title">Bachelor Student</p>
+        <p class="title">B.Sc.</p>
         <p class="blurb">Maximilian finished his Bachelor thesis in Computer Science at Faculty IV</p>
         <ul class='social-links'>
         </ul>
