changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -115,23 +115,7 @@
 
 
   <section class="members">
-    <div class="mem">
-	  <a href="maiwald.html"> 
-      <div class="mugshot" style="background-image: url(/img/am500.png);"></div>
-      <div class="info">
-        <h3>Amanda Maiwald</h3>
-	
-        <p class="title">Master Student. I am co-founder and responsible for codary's business development and product development. I studied economics and computer science at the Technische Universität and Humboldt Universität in Berlin. In my Master thesis I explore gamification in the context of programming education.</p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:a.maiwald@codary.org"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
+ 
 <div class="mem">
 	  <a href="zhang.html"> 
       <div class="mugshot" style="background-image: url(/img/wz_500.png);"></div>
@@ -242,6 +226,17 @@
       </div>
     </div>  
 
+
+ <div class="mem">
+      <div class="mugshot" style="background-image: url(/img/am500.png);"></div>
+      <div class="info">
+        <h3>Amanda Maiwald</h3>	
+        <p class="title">M.Sc.</p>
+        <p class="blurb">Master thesis written in our group</p>
+        <ul class='social-links'>
+        </ul>
+      </div>
+    </div>
 
 
 
