changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -70,26 +70,6 @@
        </a>
     </div>
     
-  
-
-    <div class="mem">
-	  <a href="matic.html"> 
-      <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
-      <div class="info">
-		
-        <h3>Matko Matic</h3>
-		
-        <p class="title">Student Research Assistant</p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:matko.matic@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>  
-
-
-
 
     <div class="mem">
 	  <a href="delmestre.html"> 
@@ -214,12 +194,25 @@
     
   <section class="members alumni" style="background-color: #ffffff;">
 
+
+ <div class="mem">
+      <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
+      <div class="info">		
+        <h3>Matko Matic</h3>	
+        <p class="title"></p>
+        <p class="blurb">Matko worked with us as a student research assistant for 7 months.</p>
+        <ul class='social-links'>          
+        </ul>
+      </div>
+    </div>  
+
+
  <div class="mem">
       <div class="mugshot" style="background-image: url(/img/bl_500.png);"></div>
       <div class="info">
         <h3>Bernhard Lang</h3>
-        <p class="title">Ph. D. student</p>
-        <p class="blurb"> </p>
+        <p class="title"></p>
+        <p class="blurb">Bernhard worked with us as a Ph.D. student for 9 months.</p>
         <p class="blurb"></p>
         <ul class='social-links'>
         </ul>
@@ -232,7 +225,7 @@
       <div class="info">
         <h3>Amanda Maiwald</h3>	
         <p class="title">M.Sc.</p>
-        <p class="blurb">Master thesis written in our group</p>
+        <p class="blurb">Amanda finished her Master thesis in our group.</p>
         <ul class='social-links'>
         </ul>
       </div>
@@ -245,7 +238,7 @@
       <div class="info">
         <h3>Maximilian Pohlmann</h3>
         <p class="title">B.Sc.</p>
-        <p class="blurb">Maximilian finished his Bachelor thesis in Computer Science at Faculty IV</p>
+        <p class="blurb">Maximilian worked with us as a student research assistant for 6 months and finished his Bachelor thesis in Computer Science at Faculty IV</p>
         <ul class='social-links'>
         </ul>
       </div>
@@ -259,7 +252,7 @@
       <div class="info">
         <h3>Carolin Brunn</h3>
         <p class="title">B.Sc.</p>
-        <p class="blurb">Bachelor thesis written in our group</p>
+        <p class="blurb">Caro finished her Bachelor thesis in our group and worked with us as a student research assistant for 2 years.</p>
         <ul class='social-links'>
         </ul>
       </div>
@@ -272,7 +265,7 @@
       <div class="info">
         <h3>Yiqun Xiao</h3>
         <p class="title">M.Sc.</p>
-        <p class="blurb">Master thesis written in our group</p>
+        <p class="blurb">Yiqun finisched her Master thesis in our group.</p>
         <ul class='social-links'>
           <!--  <li><a class='icon-mail' aria-label='Email' href="mailto:bernhard.lang@student.uni-tuebingen.de"></a></li> -->
         </ul>
@@ -285,7 +278,7 @@
       <div class="info">
         <h3>Shaohan Li</h3>
         <p class="title">M.Sc.</p>
-        <p class="blurb">Master thesis co-supervised with Prof. Dr. Felix Wichmann (Uni Tübingen)</p>
+        <p class="blurb">Shaohan finished her Master thesis in our group co-supervised with Prof. Dr. Felix Wichmann (Uni Tübingen).</p>
         <ul class='social-links'>
           <!--  <li><a class='icon-mail' aria-label='Email' href="mailto:bernhard.lang@student.uni-tuebingen.de"></a></li> -->
         </ul>
@@ -329,7 +322,7 @@
       <div class="mugshot" style="background-image: url(/img/zeiner.png);"></div>
       <div class="info">
         <h3>Dr. Katharina Zeiner</h3>
-        <p class="blurb">Currently at Stuttgart Media University</p>
+        <p class="blurb">Currently at Stuttgart Media University.</p>
         <ul class='social-links'>
         <!-- <li><a class='icon-mail' aria-label='Email' href="mailto:minjung.kim@cl.cam.ac.uk"></a></li> -->
         </ul>
@@ -340,7 +333,7 @@
       <div class="mugshot" style="background-image: url(/img/otto.png);"></div>
       <div class="info">
         <h3>Thomas Otto, Ph.D.</h3>
-        <p class="blurb">Currently at University of St. Andrews</p>
+        <p class="blurb">Currently at University of St. Andrews.</p>
         <ul class='social-links'>
         <!-- <li><a class='icon-mail' aria-label='Email' href="mailto:minjung.kim@cl.cam.ac.uk"></a></li> -->
         </ul>
