changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -238,7 +238,7 @@
       <div class="info">
         <h3>Maximilian Pohlmann</h3>
         <p class="title">B.Sc.</p>
-        <p class="blurb">Maximilian worked with us as a student research assistant for 6 months and finished his Bachelor thesis in Computer Science at Faculty IV</p>
+        <p class="blurb">Maximilian worked with us as a student research assistant for 6 months and finished his Bachelor thesis in Computer Science at Faculty IV.</p>
         <ul class='social-links'>
         </ul>
       </div>
