changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -82,7 +82,7 @@
         <p class="title">Student research assistant</p>
         <p class="blurb"></p>
         <ul class='social-links'> 
-        <li><a class='icon-mail' aria-label='Email' href="mailto:matko.matic@campus.tu-berlin.de"></a></li>         
+        <li><a class='icon-mail' aria-label='Email' href="mailto:matko.matic@tutanota.com"></a></li>         
         </ul>
       </div>
        </a>
