changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -73,6 +73,25 @@
 
 
 <div class="mem">
+          <a href="makohl.html"> 
+      <div class="mugshot" style="background-image: url(/img/mem_500.png);"></div>
+      <div class="info">
+		
+        <h3>Marie-Elisabeth Makohl</h3>	
+
+        <p class="title">Student research assistant. I study easy evaluation and comparison of brightness perception models.</p>
+        <p class="blurb"></p>
+        <ul class='social-links'> 
+        <li><a class='icon-mail' aria-label='Email' href="mailto:mem_1@gmx.de"></a></li>         
+        </ul>
+      </div>
+       </a>
+    </div>  
+
+
+
+
+<div class="mem">
           <a href="matic.html"> 
       <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
       <div class="info">
