changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -74,7 +74,7 @@
 
 <div class="mem">
           <a href="makohl.html"> 
-      <div class="mugshot" style="background-image: url(/img/mem500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/m-em_500.png);"></div>
       <div class="info">
 		
         <h3>Marie-Elisabeth Makohl</h3>	
