changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -135,6 +135,25 @@
   <section class="members">
  
 <div class="mem">
+	  <a href="ghosh.html"> 
+      <div class="mugshot" style="background-image: url(/img/pg_500.png);"></div>
+      <div class="info">
+        <h3>Poulami Ghosh</h3>
+	
+        <p class="title">Master Student. As part of my lab rotation I do experiment to investigate whether human brightness perception can be done with online experimental tools.</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:poulami.ghosh@bccn-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+<div class="mem">
 	  <a href="zhang.html"> 
       <div class="mugshot" style="background-image: url(/img/wz_500.png);"></div>
       <div class="info">
