--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -191,6 +191,26 @@
 
 
 <div class="mem">
+	  <a href="gruenwald.html"> 
+      <div class="mugshot" style="background-image: url(/img/jg_500.png);"></div>
+      <div class="info">
+        <h3>Jakob Grünwald</h3>
+	
+        <p class="title">Bachelor Student.</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:jakob@gruenwald-bs.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+
+
+<div class="mem">
 	  <a href="kestel.html"> 
       <div class="mugshot" style="background-image: url(/img/nk500.png);"></div>
       <div class="info">
