changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -71,6 +71,22 @@
     </div>
 
 
+<div class="mem">
+          <a href="cifci.html"> 
+      <div class="mugshot" style="background-image: url(/img/jmc_500.png);"></div>
+      <div class="info">
+		
+        <h3>Yasin Mehmet Cifci</h3>	
+
+        <p class="title">Student research assistant. I work on brightness perception models.</p>
+        <p class="blurb"></p>
+        <ul class='social-links'> 
+        <li><a class='icon-mail' aria-label='Email' href="mailto:myasincifci@gmail.com"></a></li>         
+        </ul>
+      </div>
+       </a>
+    </div>  
+
 
 <div class="mem">
           <a href="makohl.html"> 
