changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -167,6 +167,21 @@
     </div>
 
 
+<div class="mem">
+	  <a href="schillen.html"> 
+      <div class="mugshot" style="background-image: url(/img/as_500.png);"></div>
+      <div class="info">
+        <h3>Annalena Katharina Schillen</h3>
+	
+        <p class="title">Bachelor student.</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:schillen@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
 
 
 <div class="mem">
