changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -227,7 +227,7 @@
       <div class="info">
         <h3>Jakob Grünwald</h3>
 	
-        <p class="title">Bachelor Student.</p>
+        <p class="title">Bachelor Student. In my Internship, I study stochastic dependencies in scaling methods, in particular MLDS. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
