changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -259,22 +259,6 @@
 
 
 
- <div class="mem">
-	  <a href="wohlhaupt.html"> 
-      <div class="mugshot" style="background-image: url(/img/CW500.png);"></div>
-      <div class="info">
-        <h3>Christian Wohlhaupt</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis I am researching potential differences in the aesthetic perception of sunset-pictures by people of different geographic origin for marketing purposes. </p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:wohlhaupt@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
 
 <div class="mem">
 	  <a href="zinke.html"> 
@@ -303,6 +287,16 @@
   <section class="members alumni" style="background-color: #ffffff;">
 
 
+<div class="mem">
+      <div class="mugshot" style="background-image: url(/img/CW500.png);"></div>
+      <div class="info">
+        <h3>Christian Wohlhaupt</h3>	
+        <p class="title">B.Sc.</p>
+        <p class="blurb">Christian finished his Bachelor thesis in our group.</p>
+        <ul class='social-links'>
+        </ul>
+      </div>
+    </div>
 
  <div class="mem">
       <div class="mugshot" style="background-image: url(/img/bl_500.png);"></div>
