changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -288,7 +288,7 @@
 
 
 <div class="mem">
-      <div class="mugshot" style="background-image: url(/img/CW500.png);"></div>
+      <div class="mugshot" style="background-image: url(/img/cw_500.png);"></div>
       <div class="info">
         <h3>Christian Wohlhaupt</h3>	
         <p class="title">B.Sc.</p>
