changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -238,7 +238,21 @@
     </div>
 
 
-
+<div class="mem">
+	  <a href="hausmann.html"> 
+      <div class="mugshot" style="background-image: url(/img/rh_500.png);"></div>
+      <div class="info">
+        <h3>Tom Ravid Hausmann</h3>
+	
+        <p class="title">Bachelor Student. I'm working on expanding and refactoring the multyscale package for greater transparency in brightness perception modelling. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:tu@ravid.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
 
 
 <div class="mem">
