changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -103,27 +103,7 @@
       </div>
        </a>
     </div>  
-
-
-
-
-<div class="mem">
-          <a href="matic.html"> 
-      <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
-      <div class="info">
-		
-        <h3>Matko Matic</h3>	
-
-        <p class="title">Student research assistant</p>
-        <p class="blurb"></p>
-        <ul class='social-links'> 
-        <li><a class='icon-mail' aria-label='Email' href="mailto:matko.matic@tutanota.com"></a></li>         
-        </ul>
-      </div>
-       </a>
-    </div>  
-
-   
+ 
 
     <div class="mem">
 	  <a href="delmestre.html"> 
@@ -299,6 +279,19 @@
   <h2>Alumni</h2>
     
   <section class="members alumni" style="background-color: #ffffff;">
+
+
+<div class="mem">
+   <div class="mugshot" style="background-image: url(/img/matic.png);"></div>
+      <div class="info">
+        <h3>Matko Matic</h3>	
+        <p class="title">B.Sc.</p>
+        <p class="blurb">Matko worked with us as a student research assistant for 1 year.</p>
+        <ul class='social-links'>
+        </ul>
+      </div>
+    </div>       
+
 
 
 <div class="mem">
