changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -252,6 +252,22 @@
     </div>
 
 
+<div class="mem">
+	  <a href="soerensen.html"> 
+      <div class="mugshot" style="background-image: url(/img/js_500.png);"></div>
+      <div class="info">
+        <h3>Jarl-Sebastian Soerensen</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I want to investigate the influence of noise on human edge perception in natural images. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:j.sorensen@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
 
 
 <div class="mem">
