changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -290,6 +290,15 @@
  </section>
 
 
+  <br />
+  <h2>Alumni</h2>
+    
+  <h3>Matko Matic</h3>	
+  <h3>Christian Wohlhaupt</h3>	
+
+
+
+
 
   <br />
   <h2>Alumni</h2>
