--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -237,6 +237,24 @@
 
 
 <div class="mem">
+	  <a href="schulzebroering.html"> 
+      <div class="mugshot" style="background-image: url(/img/hsb_500.png);"></div>
+      <div class="info">
+        <h3>Hendrik Schulze Bröring</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I explore how size reduction of input stimuli affects the output of multiscale spatial filtering models. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:schulzebroering@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="soerensen.html"> 
       <div class="mugshot" style="background-image: url(/img/js_500.png);"></div>
       <div class="info">
