--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -166,6 +166,24 @@
 
 
 
+<div class="mem">
+	  <a href="allaham.html"> 
+      <div class="mugshot" style="background-image: url(/img/platzhalter_mann_500.png);"></div>
+      <div class="info">
+        <h3>Anas Allaham</h3>
+	
+        <p class="title">Bachelor Student. My Bachelor thesis focuses on the study of brightness and its entangled relationship with perceptual phenomena in a practical setting. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:contact@anasallaham.com"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+ 
+
+
 
  <div class="mem">
 	  <a href="bindermann.html"> 
