changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -131,39 +131,6 @@
   <section class="members">
  
 
-<div class="mem">
-	  <a href="schillen.html"> 
-      <div class="mugshot" style="background-image: url(/img/as_500.png);"></div>
-      <div class="info">
-        <h3>Annalena Katharina Schillen</h3>
-	
-        <p class="title">Bachelor student.</p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:schillen@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
-
-<div class="mem">
-	  <a href="zhang.html"> 
-      <div class="mugshot" style="background-image: url(/img/wz_500.png);"></div>
-      <div class="info">
-        <h3>Wenwen Zhang</h3>
-	
-        <p class="title">Bachelor Student. In my Bachelor thesis, I study the relationship between apparent contrast (supra-threshold discriminability) and contrast sensitivity (contrast discrimination thresholds) in human observers.</p>
-        <p class="blurb"></p>
-        <p class="blurb"></p>
-        <ul class='social-links'>
-          <li><a class='icon-mail' aria-label='Email' href="mailto:wenwen.zhang@campus.tu-berlin.de"></a></li>
-        </ul>
-      </div>
-      </a>
-    </div>
-
 
 
 <div class="mem">
@@ -221,6 +188,24 @@
 
 
 <div class="mem">
+	  <a href="schillen.html"> 
+      <div class="mugshot" style="background-image: url(/img/as_500.png);"></div>
+      <div class="info">
+        <h3>Annalena Katharina Schillen</h3>
+	
+        <p class="title">Bachelor student.</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:schillen@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="schulzebroering.html"> 
       <div class="mugshot" style="background-image: url(/img/hsb_500.png);"></div>
       <div class="info">
@@ -239,6 +224,24 @@
 
 
 <div class="mem">
+	  <a href="simsek.html"> 
+      <div class="mugshot" style="background-image: url(/img/es_500.png);"></div>
+      <div class="info">
+        <h3>Enis Can Simsek</h3>
+	
+        <p class="title">Bachelor student. In my Bachelor thesis I study the contrast constancy with supra-threshold contrast using MLCM. </p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:enis.c.simsek@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+
+<div class="mem">
 	  <a href="soerensen.html"> 
       <div class="mugshot" style="background-image: url(/img/js_500.png);"></div>
       <div class="info">
@@ -249,6 +252,23 @@
         <p class="blurb"></p>
         <ul class='social-links'>
           <li><a class='icon-mail' aria-label='Email' href="mailto:j.sorensen@campus.tu-berlin.de"></a></li>
+        </ul>
+      </div>
+      </a>
+    </div>
+
+
+<div class="mem">
+	  <a href="zhang.html"> 
+      <div class="mugshot" style="background-image: url(/img/wz_500.png);"></div>
+      <div class="info">
+        <h3>Wenwen Zhang</h3>
+	
+        <p class="title">Bachelor Student. In my Bachelor thesis, I study the relationship between apparent contrast (supra-threshold discriminability) and contrast sensitivity (contrast discrimination thresholds) in human observers.</p>
+        <p class="blurb"></p>
+        <p class="blurb"></p>
+        <ul class='social-links'>
+          <li><a class='icon-mail' aria-label='Email' href="mailto:wenwen.zhang@campus.tu-berlin.de"></a></li>
         </ul>
       </div>
       </a>
