changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -229,7 +229,7 @@
       <div class="info">
         <h3>Enis Can Simsek</h3>
 	
-        <p class="title">Bachelor student. In my Bachelor thesis I study the contrast constancy with supra-threshold contrast using MLCM. </p>
+        <p class="title">Bachelor student. In my Bachelor thesis, I study the contrast constancy with supra-threshold contrast using MLCM. </p>
         <p class="blurb"></p>
         <p class="blurb"></p>
         <ul class='social-links'>
