changes in Biancas laptop

--- a/content/pages/people.html
+++ b/content/pages/people.html
@@ -463,6 +463,12 @@
 
 
 
+ </section>
+
+
+ <br />
+  <h2>Alumni Students</h2>
+
   <h4>Marcus Bindermann</h4>
   <h4>Poulami Ghosh</h4>
   <h4>Nico Kestel</h4> 
